try fix edit covered 3

--- a/assets/main.scss
+++ b/assets/main.scss
@@ -108,7 +108,7 @@
   width: 80%;
   height: 20px;
   margin-left: -10px;
-  margin-top: 4px;
+  margin-top: -10px;
   border-width: 0px;
   box-shadow:#f6f6f6;
   color: #d2d6da;
